Fix tooltip drop-shadow overlapping triangle
Place the triangle after the text box rather than before, in order to change the z-index and avoid the box-shadow overlapping the triangle

--- a/src/components/icon-toolbar/icon-toolbar.scss
+++ b/src/components/icon-toolbar/icon-toolbar.scss
@@ -76,7 +76,7 @@
     opacity: 1;
   }
 
-  &::before {
+  &::after {
     $triangle-size: 7px;
 
     position: absolute;
