--- a/src/components/tooltip/tooltip.scss
+++ b/src/components/tooltip/tooltip.scss
@@ -30,7 +30,7 @@ $triangle-size: 10px;
     top: $y-offset;
   }
 
-  &::before {
+  &::after {
     position: absolute;
     bottom: -$y-offset + 0.5;
     left: $x-offset / 2;
@@ -50,12 +50,12 @@ $triangle-size: 10px;
     }
   }
 
-  &--right::before {
+  &--right::after {
     right: $x-offset / 2;
     left: auto;
   }
 
-  &--top::before {
+  &--top::after {
     top: -$y-offset + 0.5;
     bottom: auto;
     border-width: 0 $triangle-size $triangle-size $triangle-size;
